# swagger.json
@@ -11,37 +11,7 @@
     "http"
   ],
   "paths": {
-    "/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/auth/google": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/auth/google/callback": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/api/fish/": {
+    "/api/fish": {
       "get": {
         "description": "",
         "responses": {
@@ -52,6 +22,16 @@
       },
       "post": {
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Fish"
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -93,6 +73,14 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Fish"
+            }
           }
         ],
         "responses": {
@@ -130,7 +118,7 @@
         }
       }
     },
-    "/api/users/": {
+    "/api/users": {
       "get": {
         "description": "",
         "responses": {
@@ -141,6 +129,16 @@
       },
       "post": {
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -182,6 +180,14 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
           }
         ],
         "responses": {
@@ -224,238 +230,85 @@
     "Fish": {
       "type": "object",
       "properties": {
-        "type": {
+        "_id": {
+          "type": "string"
+        },
+        "species": {
+          "type": "string"
+        },
+        "river": {
+          "type": "string"
+        },
+        "weightOz": {
+          "type": "number"
+        },
+        "lengthIn": {
+          "type": "number"
+        },
+        "lureUsed": {
+          "type": "string"
+        },
+        "catchDate": {
           "type": "string",
-          "example": "object"
+          "format": "date-time"
         },
-        "properties": {
-          "type": "object",
-          "properties": {
-            "_id": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            },
-            "species": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            },
-            "river": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            },
-            "weightOz": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "number"
-                }
-              }
-            },
-            "lengthIn": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "number"
-                }
-              }
-            },
-            "lureUsed": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            },
-            "catchDate": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "format": {
-                  "type": "string",
-                  "example": "date-time"
-                }
-              }
-            },
-            "notes": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            },
-            "caughtBy": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            }
-          }
+        "notes": {
+          "type": "string"
         },
-        "required": {
-          "type": "array",
-          "example": [
-            "species",
-            "river",
-            "weightOz",
-            "lengthIn",
-            "lureUsed",
-            "caughtBy"
-          ],
-          "items": {
-            "type": "string"
-          }
+        "caughtBy": {
+          "type": "string"
         }
-      }
+      },
+      "required": [
+        "species",
+        "river",
+        "weightOz",
+        "lengthIn",
+        "lureUsed",
+        "caughtBy"
+      ]
     },
     "User": {
       "type": "object",
       "properties": {
-        "type": {
+        "_id": {
+          "type": "string"
+        },
+        "username": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "oauthProvider": {
+          "type": "string"
+        },
+        "oauthId": {
+          "type": "string"
+        },
+        "profilePic": {
+          "type": "string"
+        },
+        "joinDate": {
           "type": "string",
-          "example": "object"
+          "format": "date-time"
         },
-        "properties": {
-          "type": "object",
-          "properties": {
-            "_id": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            },
-            "username": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            },
-            "email": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            },
-            "oauthProvider": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            },
-            "oauthId": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            },
-            "profilePic": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            },
-            "joinDate": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                },
-                "format": {
-                  "type": "string",
-                  "example": "date-time"
-                }
-              }
-            },
-            "favoriteSpecies": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            }
-          }
-        },
-        "required": {
-          "type": "array",
-          "example": [
-            "username",
-            "email",
-            "oauthProvider",
-            "oauthId"
-          ],
-          "items": {
-            "type": "string"
-          }
+        "favoriteSpecies": {
+          "type": "string"
         }
-      }
+      },
+      "required": [
+        "username",
+        "email",
+        "oauthProvider",
+        "oauthId"
+      ]
     },
     "Error": {
       "type": "object",
       "properties": {
-        "type": {
-          "type": "string",
-          "example": "object"
-        },
-        "properties": {
-          "type": "object",
-          "properties": {
-            "error": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
-                }
-              }
-            }
-          }
+        "error": {
+          "type": "string"
         }
       }
     }
